--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-d3-heatmap": "^1.1.5",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
